Added frontend switches

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
         <input id="shwitch" type="checkbox">
         <span class="slider round"></span>
     </label>
+    <br>
+    <br>
+    <!-- Rounded switch -->
+    <label class="switch">
+        <input id="shwitch2" type="checkbox">
+        <span class="slider-red round"></span>
+    </label>
 
     <!-- include the client socket library-->
     <script src="/socket.io/socket.io.js"></script>
